--- a/app/src/main/res/layout/intro_config.xml
+++ b/app/src/main/res/layout/intro_config.xml
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,9 +22,30 @@
     android:orientation="vertical">
 
 
-    <RelativeLayout
+    <TextView
+        android:layout_width="match_parent"
+        app:autoSizeTextType="uniform"
+        app:layout_heightPercent="17.5%"
+        android:padding="20dp"
+        android:gravity="center"
+        android:text="@string/intro_config"
+        android:textColor="#ffffff"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        app:autoSizeTextType="uniform"
+        app:layout_heightPercent="17.5%"
+        android:padding="20dp"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:text="@string/intro_config2"
+        android:textColor="#ffffff"
+        />
+
+    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#ffffff"
         android:scaleX="0.65"
         android:scaleY="0.65">
 
@@ -39,150 +60,14 @@
             android:theme="@style/ToolbarTheme"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-
-        <RelativeLayout
+        <FrameLayout
+            android:id="@+id/basecontent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:baselineAligned="false"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/holyday"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:background="@color/colorPrimary"
-                android:gravity="center"
-                android:textColor="#ffffff"
-                android:textSize="18sp"
-                android:visibility="gone" />
-
-            <com.metinkale.prayerapp.utils.RTLViewPager
-                android:id="@+id/pager"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_below="@+id/holyday"
-                android:layout_marginBottom="30dp" />
-
-
-            <View
-                android:id="@+id/center"
-                android:layout_width="0dp"
-                android:layout_height="100dp"
-                android:layout_centerInParent="true" />
-
-            <View
-                android:id="@+id/bottomSliderCloseHandler"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_above="@+id/bottomSlider"
-                android:layout_alignParentTop="true" />
-
-
-            <View
-                android:id="@+id/topSliderCloseHandler"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentBottom="true"
-                android:layout_below="@+id/topSlider" />
-
-            <com.metinkale.prayerapp.utils.MultipleOrientationSlidingDrawer
-                android:id="@+id/bottomSlider"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentBottom="true"
-                android:layout_alignTop="@+id/center"
-                app:content="@+id/content"
-                app:handle="@+id/footerText"
-                app:orientation="bottom">
-
-                <TextView
-                    android:id="@+id/footerText"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dip"
-                    android:layout_alignParentBottom="true"
-                    android:background="@color/colorPrimary"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:text="@string/monthly"
-                    android:textColor="#ffffff"
-                    android:textSize="20sp" />
-
-                <FrameLayout
-                    android:id="@+id/content"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="bottom"
-                    android:translationZ="2dp">
-
-                    <fragment
-                        class="com.metinkale.prayerapp.vakit.fragments.ImsakiyeFragment"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/background"
-                        android:tag="imsakiye" />
-
-                </FrameLayout>
-            </com.metinkale.prayerapp.utils.MultipleOrientationSlidingDrawer>
-
-            <com.metinkale.prayerapp.utils.MultipleOrientationSlidingDrawer
-                android:id="@+id/topSlider"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignBottom="@+id/center"
-                android:layout_alignParentTop="true"
-                app:content="@+id/content"
-                app:handle="@+id/handle"
-                app:orientation="top">
-
-                <View
-                    android:id="@+id/handle"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dip"
-                    android:gravity="center" />
-
-                <FrameLayout
-                    android:id="@id/content"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="bottom"
-                    android:translationZ="2dp">
-
-                    <fragment
-                        class="com.metinkale.prayerapp.vakit.fragments.SettingsFragment"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:tag="settings" />
-
-                </FrameLayout>
-            </com.metinkale.prayerapp.utils.MultipleOrientationSlidingDrawer>
-
-            <FrameLayout
-                android:id="@+id/fragContainer"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:translationZ="2dp"></FrameLayout>
-
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/addCity"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginBottom="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
-                android:src="@drawable/ic_add_white_24dp"
-                app:backgroundTint="#ff0000"
-                app:borderWidth="0dp"
-                app:elevation="6dp"
-                app:fabSize="normal"
-                app:pressedTranslationZ="12dp" />
-        </RelativeLayout>
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/toolbar" />
 
 
     </RelativeLayout>
-
-</LinearLayout>
+</android.support.percent.PercentRelativeLayout>
