--- a/app/src/main/res/layout/vakit_addcity.xml
+++ b/app/src/main/res/layout/vakit_addcity.xml
@@ -15,18 +15,33 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
     android:orientation="vertical">
+
+    <android.support.v7.widget.SwitchCompat
+        android:id="@+id/autoLocation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@color/colorPrimary"
+        android:checked="false"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="10dp"
+        android:text="@string/autoLocation"
+        android:textColor="#ffffff"
+        android:textSize="20sp" />
 
     <ListView
         android:id="@+id/listView"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_above="@+id/legacySwitch"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/autoLocation"
         android:background="@color/background" />
 
     <TextView
@@ -46,14 +61,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="20dp"
-        app:backgroundTint="#ff0000"
+        android:layout_marginRight="20dp"
         android:src="@drawable/ic_search_white_24dp"
+        app:backgroundTint="#ff0000"
         app:borderWidth="0dp"
         app:elevation="6dp"
         app:fabSize="normal"
-        app:pressedTranslationZ="12dp"
-        android:layout_marginRight="20dp"
-        android:layout_alignParentRight="true" />
+        app:pressedTranslationZ="12dp" />
 </RelativeLayout>
