--- a/app/src/main/res/layout/vakit_fragment.xml
+++ b/app/src/main/res/layout/vakit_fragment.xml
@@ -50,12 +50,13 @@
 
         <com.metinkale.prayerapp.utils.AutoResizeTextView
             android:id="@+id/city"
+            android:layout_width="wrap_content"
             android:layout_below="@id/date"
+            android:layout_centerHorizontal="true"
             android:fontFamily="sans-serif-light"
             android:gravity="center"
             android:lines="1"
-            app:layout_heightPercent="11%"
-            app:layout_widthPercent="100%" />
+            app:layout_heightPercent="11%" />
 
         <com.metinkale.prayerapp.utils.AutoResizeTextView
             android:id="@+id/hicri"
