--- a/app/src/main/res/layout/vakit_addcity_row.xml
+++ b/app/src/main/res/layout/vakit_addcity_row.xml
@@ -59,7 +59,9 @@
         android:layout_marginTop="5dp"
         android:gravity="center"
         android:lines="1"
-        android:textSize="12sp" />
+        app:autoSizeMaxTextSize="12sp"
+        app:autoSizeMinTextSize="8sp"
+        app:autoSizeTextType="uniform" />
 
 
     <net.steamcrafted.materialiconlib.MaterialIconView
