--- a/app/src/main/res/values-tr/names.xml
+++ b/app/src/main/res/values-tr/names.xml
@@ -84,7 +84,7 @@
         <item>El-Vâcid</item>
         <item>El-Mâcid</item>
         <item>El-Vâhid</item>
-        <item>El-Samed</item>
+        <item>Es-Samed</item>
         <item>El-Kādir</item>
         <item>El-Muktedir</item>
         <item>El-Mukaddim</item>
