--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -77,6 +77,7 @@
         <item>Deutsch</item>
         <item>English</item>
         <item>عربي</item>
+        <item>Indonesia</item>
         <item>Français</item>
         <item>Bosanski</item>
         <item>Nederlands</item>
@@ -91,6 +92,7 @@
         <item>de</item>
         <item>en</item>
         <item>ar</item>
+        <item>id</item>
         <item>fr</item>
         <item>bs</item>
         <item>nl</item>
