--- a/app/src/main/res/layout/widget_4x2_clock.xml
+++ b/app/src/main/res/layout/widget_4x2_clock.xml
@@ -54,7 +54,9 @@
             android:id="@+id/greg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:layout_below="@+id/time"
+            android:lines="1"
             android:paddingStart="5dp"
             android:text="Greg"
             android:textColor="#ffffff" />
@@ -65,6 +67,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_below="@+id/time"
+            android:layout_toRightOf="@+id/greg"
+            android:ellipsize="middle"
+            android:gravity="right"
+            android:singleLine="true"
             android:paddingEnd="5dp"
             android:text="Hijri"
             android:textColor="#ffffff" />
