--- a/app/src/main/res/menu/zikr.xml
+++ b/app/src/main/res/menu/zikr.xml
@@ -18,14 +18,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menu_spinner"
+        android:background="#ff00"
+        android:title="@string/dhikr"
+        app:actionViewClass="android.widget.Spinner"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/add"
         app:materialIcon="plus"
         android:title="@string/newDhikr"
-        app:showAsAction="ifRoom"></item>
+        app:showAsAction="always" />
     <item
         android:id="@+id/del"
         app:materialIcon="close"
         android:title="@string/delete"
-        app:showAsAction="ifRoom"></item>
+        app:showAsAction="always" />
 
 </menu>
