--- a/app/src/main/res/layout/dhikr_main.xml
+++ b/app/src/main/res/layout/dhikr_main.xml
@@ -42,7 +42,7 @@
         android:layout_weight="1"
         android:gravity="center">
 
-        <com.metinkale.prayerapp.zikr.ZikrView
+        <com.metinkale.prayerapp.dhikr.DhikrView
             android:id="@+id/zikr"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
