some small fixes

--- a/app/src/main/res/layout/vakit_sort_item.xml
+++ b/app/src/main/res/layout/vakit_sort_item.xml
@@ -30,9 +30,11 @@
         android:id="@+id/delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:visibility="gone"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:padding="8dp"
+        android:visibility="gone"
         app:materialIcon="delete"
         app:materialIconColor="#aaa"
         app:materialIconSize="24dp" />
@@ -42,11 +44,11 @@
         android:id="@+id/city"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/source"
-        android:layout_alignStart="@+id/source"
-        android:layout_alignRight="@+id/source"
-        android:layout_alignEnd="@+id/source"
         android:layout_below="@+id/source"
+        android:layout_alignStart="@+id/source"
+        android:layout_alignLeft="@+id/source"
+        android:layout_alignEnd="@+id/source"
+        android:layout_alignRight="@+id/source"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
 
@@ -54,22 +56,23 @@
         android:id="@+id/source"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
-        android:layout_toEndOf="@+id/delete"
-        android:layout_toLeftOf="@+id/handle"
-        android:layout_toRightOf="@+id/delete"
+        android:layout_marginLeft="10dp"
         android:layout_toStartOf="@+id/handle"
+        android:layout_toLeftOf="@+id/handle"
+        android:layout_toEndOf="@+id/delete"
+        android:layout_toRightOf="@+id/delete"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <net.steamcrafted.materialiconlib.MaterialIconView
         android:id="@+id/handle"
         android:layout_width="?listPreferredItemHeight"
         android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
         android:contentDescription="@null"
+        android:padding="8dp"
         android:scaleType="center"
         app:materialIcon="reorder_horizontal"
         app:materialIconColor="#aaaaaa"
